examples/test/testpolicy17345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17345
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key24: value1
      key25: value28
      key23: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value18
      podSelector:
        matchLabels:
          key26: value26
          key36: value11
          key28: value0
